Fixed responsive width on mobile, updated readme

--- a/Junior/Fylo-Data-Storage-Component/queries.css
+++ b/Junior/Fylo-Data-Storage-Component/queries.css
@@ -10,9 +10,8 @@
   }
 }
 
-@media (min-width: 820px) {
+@media (min-width: 821px) {
   body {
-    align-items: center;
     background-image: url(images/bg-desktop.png);
     background-position: bottom;
     background-size: 100vw 52.5vh;
@@ -21,6 +20,8 @@
   .cards {
     flex-direction: row;
     gap: 3.2rem;
+    max-width: initial;
+    width: initial;
   }
 
   .card__header {
